# rust_webapi_example

./: Cargo.toml  LICENSE  README.md
business/: Cargo.toml
business/src/: lib.rs
business/src/service/: mod.rs  usuario_service.rs
business/src/traits/: base_service.rs
data/: Cargo.toml
data/src/: connection.rs  lib.rs
data/src/repositories/: usuario.rs
data/src/structs/: usuario.rs
data/src/traits/: base_repo.rs  mod.rs
db/: Cargo.toml
db/src/: connection.rs  lib.rs
db/src/repos/: mod.rs  usuario_repo.rs
db/src/structs/: base.rs
db/src/traits/: base_repo.rs
postgre_api/: Cargo.toml  build.rs  postgre_api.toml
postgre_api/src/: main.rs
postgre_api/src/controllers/: usuario.rs
postgre_api_data/: Cargo.toml
postgre_api_data/src/: lib.rs
postgre_api_data/src/repositories/: usuario.rs
postgre_api_data/src/structs/: mod.rs  state.rs  table.rs  usuario.rs
postgre_api_data/src/traits/: crud.rs
postgre_api_data/src/utils/: configuration.rs  connection.rs  mod.rs
rust_rest_api_example/: Cargo.toml  build.rs
rust_rest_api_example/src/: main.rs
rust_rest_api_example/src/controllers/: usuario.rs
rust_rest_api_example/src/structs/: mod.rs  response.rs  state.rs
rust_rest_api_example/src/utils/: configuration.rs  connection.rs
rust_rest_api_example_data/: Cargo.toml
rust_rest_api_example_data/src/: lib.rs
rust_rest_api_example_data/src/repositories/: usuario.rs
rust_rest_api_example_data/src/structs/: mod.rs  state.rs  usuario.rs
rust_rest_api_example_data/src/traits/: crud.rs
rust_rest_api_example_utils/: Cargo.toml
rust_rest_api_example_utils/src/: config.rs
utils/: Cargo.toml
web_api/: Cargo.toml  config.json
web_api/src/: main.rs
web_api/src/controllers/: mod.rs  usuario.rs  usuario_controller.rs
web_api/src/structs/: response.rs
