[package]
name    = "db"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/rust_rest_api_example"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
sqlx = { version = "0.5.5", features = [ "runtime-tokio-rustls", "postgres" ] }
async-trait = "0.1.50"
static_init = "1.0.1"
tokio = "1.7.1"
utils = { path = "../utils" }
data = { path = "../data" }
