[package]
name    = "postgre_api"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/postgre_api"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
postgre_api_data = { path = "../postgre_api_data" }
actix-web = "3.3.2"
