[package]
name    = "postgre_api_data"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/postgre_api"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "postgres" ] }
toml = "0.5.8"
serde = "1.0.124"
async-trait = "0.1.48"
