[package]
name    = "postgre_api_data"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/postgre_api"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "postgres" ] }
serde = "1.0.125"
serde_json = "1.0.64"
async-trait = "0.1.48"
