[package]
name    = "rust_rest_api_example"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/rust_rest_api_example"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
rust_rest_api_example_data = { path = "../rust_rest_api_example_data" }
rust_rest_api_example_utils = { path = "../rust_rest_api_example_utils" }
actix-web = "4.0.0-beta.6"
serde_json = "1.0.64"
