[package]
name    = "rust_rest_api_example_data"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/rust_rest_api_example"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
sqlx = { version = "0.5.2", features = [ "runtime-tokio-rustls", "postgres" ] }
serde = { version = "1.0.125", features = ["derive"] }
async-trait = "0.1.50"
