[package]
name    = "web_api"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/rust_rest_api_example"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
data = { path = "../data" }
utils = { path = "../utils" }
business = { path = "../business" }
actix-web = "4.0.0-beta.7"
serde_json = "1.0.64"
